--- a/src/components/SignInSignUp.css
+++ b/src/components/SignInSignUp.css
@@ -1,20 +1,18 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Stylish';
-}
 
-body {
-    background-image: url("../components/Images/mainbg.jpeg");
+
+.lsp-body {
+    background-image: url("../components/images/mainbg.jpeg");
     display: flex;
     align-items: center;
     justify-content: center;
     min-height: 100vh;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
     font-family: 'Stylish';
    
 }
-.container {
+.lsp-container {
     position: relative;
     width: 70vw;
     height: 80vh;
@@ -26,7 +24,7 @@ body {
     overflow: hidden;
     z-index: 2;
 }
-.container::before {
+.lsp-container::before {
     content: "";
     position: absolute;
     top: 0;
@@ -38,7 +36,7 @@ body {
     transform: translateX(100%);
     transition: 1s ease-in-out;
 }
-.signin-signup {
+.lsp-signin-signup {
     position: absolute;
     top: 0;
     left: 0;
@@ -61,52 +59,52 @@ form {
 }
 /* SignInSignUp.css */
 
-.sign-in-form {
+.lsp-sign-in-form {
     background-color: white;
     border-radius: 15px; 
     background: linear-gradient(-115deg,#eeebd2, #eeebd2) ;
     padding: 20px; 
   }
   
-  .sign-in-form .input-field {
+  .lsp-sign-in-form .lsp-input-field {
     background: none; 
   }
   
 
   
-  .sign-up-form {
+  .lsp-sign-up-form {
     background-color: white; 
     border-radius: 15px; 
     background: linear-gradient(-115deg, #eeebd2, #eeebd2);
     padding: 20px; 
   }
   
-  .sign-up-form .input-field {
+  .lsp-sign-up-form .lsp-input-field {
     background: none; 
   }
   
   
 
 
-form.sign-in-form {
+form.lsp-sign-in-form {
     opacity: 1;
     transition: 0.5s ease-in-out;
     transition-delay: 1s;
 }
 
-form.sign-up-form {
+form.lsp-sign-up-form {
     opacity: 0;
     transition: 0.5s ease-in-out;
     transition-delay: 1s;
 }
 
-.title {
+.lsp-title {
     font-size: 35px;
     color: black;
     margin-bottom: 10px;
 }
 
-.input-field {
+.lsp-input-field {
     width: 100%;
     height: 50px;
     background: #f0f0f0;
@@ -119,14 +117,14 @@ form.sign-up-form {
     padding : 0px 7px;
 }
 
-.input-field i {
+.lsp-input-field i {
     flex: 1;
     text-align: center;
     color: black;
     font-size: 18px;
 }
 
-.input-field input {
+.lsp-input-field input {
     flex: 5;
     background: none;
     border: none;
@@ -136,7 +134,7 @@ form.sign-up-form {
     font-weight: 600;
     color: black;
 }
-.input-field:hover{
+.lsp-input-field:hover{
     border: 4px solid #4a9fdf;
     cursor: pointer;
 }
@@ -144,7 +142,7 @@ form.sign-up-form {
 
 
 
-.btn {
+.lsp-btn2{
     width: 150px;
     height: 50px;
     border: none;
@@ -156,28 +154,30 @@ form.sign-up-form {
     transition-duration: 0.6s;
     text-transform: uppercase;
     cursor: pointer;
+
 }
 
-.btn:hover {
-    font-size: 18px;
-    color: #f3e822;
-    border: 2px solid #4a9fdf;
+.lsp-btn2:hover {
     width: 160px;
     height: 60px;
+    font-size: 20px;
+    color: #f3e822;
+    border: 2px solid #4a9fdf;
+    
 
 }
 
-.social-text {
+.lsp-social-text {
     margin: 10px 0;
     font-size: 16px;
 }
 
-.social-media {
+.lsp-social-media {
     display: flex;
     justify-content: center;
 }
 
-.social-icon {
+.lsp-social-icon {
     height: 45px;
     width: 45px;
     display: flex;
@@ -195,12 +195,12 @@ a {
     text-decoration: none;
 }
 
-.social-icon:hover {
+.lsp-social-icon:hover {
     color: black;
     border-color: black;
 }
 
-.panels-container {
+.lsp-panels-container {
     position: absolute;
     top: 0;
     left: 0;
@@ -211,7 +211,7 @@ a {
     justify-content: space-around;
 }
 
-.panel {
+.lsp-panel {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -225,24 +225,24 @@ a {
 
 
 
-.left-panel {
+.lsp-left-panel {
     pointer-events: none;
 }
 
   
-.right-panel {
+.lsp-right-panel {
     pointer-events: all;
 }
 
 
 
-.content {
+.lsp-content {
     color: #fff;
     transition: 1.1s ease-in-out;
     transition-delay: 0.5s;
 }
 
-.image {
+.lsp-image {
     width: 100%;
     max-height: 100%;
     object-fit: cover;
@@ -250,93 +250,93 @@ a {
     transition-delay: 0.4s;
 }
 /* CSS stylesheet */
-.account-text {
+.lsp-account-text {
     font-style: italic;
     color: white;
   }
   
-.left-panel .image,
-.left-panel .content {
+.lsp-left-panel .lsp-image,
+.lsp-left-panel .lsp-content {
     transform: translateX(-200%);
 }
 
-.right-panel .image,
-.right-panel .content {
+.lsp-right-panel .lsp-image,
+.lsp-right-panel .lsp-content {
     transform: translateX(0);
 }
 
-.account-text {
+.lsp-account-text {
     display: none;
 }
 
 /* Animation */
-.container.sign-up-mode::before {
+.lsp-container.lsp-sign-up-mode::before {
     transform: translateX(0);
 }
 
-.container.sign-up-mode .right-panel .image,
-.container.sign-up-mode .right-panel .content {
+.lsp-container.lsp-sign-up-mode .lsp-right-panel .lsp-image,
+.lsp-container.lsp-sign-up-mode .lsp-right-panel .lsp-content {
     transform: translateX(200%);
 }
 
-.container.sign-up-mode .left-panel .image,
-.container.sign-up-mode .left-panel .content {
+.lsp-container.lsp-sign-up-mode .lsp-left-panel .lsp-image,
+.lsp-container.lsp-sign-up-mode .lsp-left-panel .lsp-content {
     transform: translateX(0);
 }
 
-.container.sign-up-mode form.sign-in-form {
+.lsp-container.lsp-sign-up-mode form.lsp-sign-in-form {
     opacity: 0;
 }
 
-.container.sign-up-mode form.sign-up-form {
+.lsp-container.lsp-sign-up-mode form.lsp-sign-up-form {
     opacity: 1;
 }
 
-.container.sign-up-mode .right-panel {
+.lsp-container.lsp-sign-up-mode .lsp-right-panel {
     pointer-events: none;
 }
 
-.container.sign-up-mode .left-panel {
+.lsp-container.lsp-sign-up-mode .lsp-left-panel {
     pointer-events: all;
 }
 ::placeholder{
     color: black;
 }
-.google-btn {
+.lsp-google-btn {
     display: flex;
     align-items: center;
   }
   
-  .google-btn p {
+  .lsp-google-btn p {
     margin-right: 8px; /* Adjust the margin as needed */
   }
   
-  .google-icon {
+  .lsp-google-icon {
     border: none;
     background-color: transparent;
     cursor: pointer;
   }
-.google-icon:hover{
+.lsp-google-icon:hover{
     border:0.2px solid black;
 }
   
-  .googlelogo {
+  .lsp-googlelogo {
     width: 24px; /* Adjust the width as needed */
     height: auto; /* Maintain aspect ratio */
   }
-#google_text{
+#lsp-google_text{
     margin-top: 18px;
 }  
 /* Responsive */
 @media (max-width:779px) {
-    .container {
+    .lsp-container {
         width: 60vw;
         height: 60vh;
     }
 }
 
 @media (max-width:635px) {
-    .container::before {
+    .lsp-container::before {
         display: none;
     }
 
@@ -344,31 +344,31 @@ a {
         width: 80%;
     }
 
-    form.sign-up-form {
+    form.lsp-sign-up-form {
         display: none;
     }
 
-    .container.sign-up-mode2 form.sign-up-form {
+    .lsp-container.lsp-sign-up-mode2 form.lsp-sign-up-form {
         display: flex;
         opacity: 1;
     }
 
-    .container.sign-up-mode2 form.sign-in-form {
+    .lsp-container.lsp-sign-up-mode2 form.lsp-sign-in-form {
         display: none;
     }
 
-    .panels-container {
+    .lsp-panels-container {
         display: none;
     }
 
-    .account-text {
+    .lsp-account-text {
         display: initial;
         margin-top: 30px;
     }
 }
 
 @media (max-width:320px) {
-    form {
+    lsp-form {
         width: 90%;
     }
 }
